--- a/colorGame.css
+++ b/colorGame.css
@@ -21,9 +21,19 @@ body{
 
 #message{
 	display: inline-block;
+	color: #606060;
+	font-weight: bold; 
 	/*display inline block??*/
 	width: 20%
 }
+
+#streak{
+	display: inline-block;
+	/*display inline block??*/
+	width: 20%
+	color:#606060;
+	padding-left: 20px;
+	font-weight: bold;
 
 h1{
 	line-height: 1.1; 
